--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Modules\UserM\Logic\UserManagementLocal.cs" />
     <Compile Include="Modules\UserM\Logic\UserManagementException.cs" />
     <Compile Include="Modules\UserM\Models\User.cs" />
+    <Compile Include="Modules\UserQueryM\IUserQuery.cs" />
+    <Compile Include="Modules\UserQueryM\UserQueryConsole.cs" />
+    <Compile Include="Modules\UserQueryM\UserQueryDefaultAnswer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime.cs" />
   </ItemGroup>
