Introduction of unit tests and add of voxel maps

--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -48,6 +48,26 @@
     <Compile Include="Modules\MailSenderM\IMailSender.cs" />
     <Compile Include="Modules\MailSenderM\MailSender.cs" />
     <Compile Include="Modules\MailSenderM\Settings.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\AutoMap\AutoMapModule.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Configuration\IVoxelMapConfiguration.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Configuration\MapInfo.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Configuration\VoxelMapConfiguration.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Controllers\VoxelMapController.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Generator\AddNoiseLayer.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Generator\CompleteFill.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Generator\ReplaceFieldType.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Generator\SmoothSurface.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Module.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\Extensions.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\FieldTypeChangeInfo.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\IPartitionLoader.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\IVoxelMap.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\Partition.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\PartitionCache.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\PartitionCacheItem.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\PartitionLoader.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\VoxelMap.cs" />
+    <Compile Include="Modules\MapVoxelStorageM\Storage\VoxelMapInfo.cs" />
     <Compile Include="Modules\ServerInfoProviderM\IServerInfoProvider.cs" />
     <Compile Include="Modules\ServerInfoProviderM\ServerInfo.cs" />
     <Compile Include="Modules\ServerInfoProviderM\ServerInfoProvider.cs" />
