--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Modules\GameInfoM\GameInfo.cs" />
     <Compile Include="Modules\GameInfoM\GameInfoProvider.cs" />
     <Compile Include="Modules\GameInfoM\IGameInfoProvider.cs" />
+    <Compile Include="Modules\MailSenderM\Extensions.cs" />
     <Compile Include="Modules\MailSenderM\IMailSender.cs" />
     <Compile Include="Modules\MailSenderM\MailSender.cs" />
     <Compile Include="Modules\MailSenderM\Settings.cs" />
+    <Compile Include="Modules\MailSenderM\DummyMailSenderHandler.cs" />
     <Compile Include="Modules\MapVoxelStorageM\AutoMap\AutoMapModule.cs" />
     <Compile Include="Modules\MapVoxelStorageM\Configuration\IVoxelMapConfiguration.cs" />
     <Compile Include="Modules\MapVoxelStorageM\Configuration\MapInfo.cs" />
@@ -77,8 +79,10 @@
     <Compile Include="Modules\UserM\Controller\LoginModel.cs" />
     <Compile Include="Modules\UserM\Controller\RegisterModel.cs" />
     <Compile Include="Modules\UserM\Controller\UsersController.cs" />
+    <Compile Include="Modules\UserM\Data\UserDatabase.cs" />
     <Compile Include="Modules\UserM\Data\UserDatabaseLocal.cs" />
     <Compile Include="Modules\UserM\Interfaces\IUserManagement.cs" />
+    <Compile Include="Modules\UserM\Logic\UserManagementConfig.cs" />
     <Compile Include="Modules\UserM\Logic\UserManagementLocal.cs" />
     <Compile Include="Modules\UserM\Logic\UserManagementException.cs" />
     <Compile Include="Modules\UserM\Logic\WebUserManagementView.cs" />
