--- a/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
+++ b/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
@@ -56,11 +56,16 @@
     <Compile Include="MapVoxelStorage\MapGeneratorTests.cs" />
     <Compile Include="MapVoxelStorage\VoxelMapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserM\WebUserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BurnSystems.WebServer\src\BurnSystems.WebServer\BurnSystems.WebServer.csproj">
+      <Project>{b31df31a-f19e-4ff9-b50f-b70f4f5949f4}</Project>
+      <Name>BurnSystems.WebServer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\BurnSystems\src\BurnSystems.csproj">
       <Project>{42023d16-afd1-4d99-bc39-9ef46982eb54}</Project>
       <Name>BurnSystems</Name>
