Users and groups are shown

--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -106,7 +106,9 @@
     <Compile Include="Modules\UserM\Data\UserDatabase.cs" />
     <Compile Include="Modules\UserM\Data\UserDatabaseLocal.cs" />
     <Compile Include="Modules\UserM\Interfaces\IUserManagement.cs" />
-    <Compile Include="Modules\UserM\Logic\UserAdminInterface.cs" />
+    <Compile Include="Modules\UserM\Logic\Admin\GroupsTreeView.cs" />
+    <Compile Include="Modules\UserM\Logic\Admin\UserAdminInterface.cs" />
+    <Compile Include="Modules\UserM\Logic\Admin\UsersTreeView.cs" />
     <Compile Include="Modules\UserM\Logic\AllowOnlyIfUserIsInGroupFilter.cs" />
     <Compile Include="Modules\UserM\Logic\CurrentUserHelper.cs" />
     <Compile Include="Modules\UserM\Logic\CurrentWebUserHelper.cs" />
