--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -51,15 +51,15 @@
     <Compile Include="Modules\DeponNet\GameClockM\GameClockManager.cs" />
     <Compile Include="Modules\DeponNet\GameM\Admin\DeponCreateGameModel.cs" />
     <Compile Include="Modules\DeponNet\GameM\Admin\DeponGameAdminInterface.cs" />
-    <Compile Include="Modules\DeponNet\GameM\Admin\GamesTreeView.cs" />
-    <Compile Include="Modules\DeponNet\GameM\Admin\GameTreeView.cs" />
+    <Compile Include="Modules\DeponNet\GameM\Admin\GamesTreeViewItem.cs" />
+    <Compile Include="Modules\DeponNet\GameM\Admin\GameTreeViewItem.cs" />
     <Compile Include="Modules\DeponNet\GameM\Controllers\DeponGamesAdminController.cs" />
     <Compile Include="Modules\DeponNet\GameM\Game.cs" />
     <Compile Include="Modules\DeponNet\GameM\LocalGameDatabase.cs" />
     <Compile Include="Modules\DeponNet\GameM\GameInfo.cs" />
     <Compile Include="Modules\DeponNet\GameM\GameManagement.cs" />
     <Compile Include="Modules\DeponNet\GameM\Interface\IGameManagement.cs" />
-    <Compile Include="Modules\DeponNet\MapM\Admin\MapAdminInterface.cs" />
+    <Compile Include="Modules\DeponNet\MapM\Admin\VoxelMapAdminInterface.cs" />
     <Compile Include="Modules\DeponNet\MapM\Admin\MapTreeViewItem.cs" />
     <Compile Include="Modules\DeponNet\MapM\FieldCoordinates.cs" />
     <Compile Include="Modules\DeponNet\MapM\FieldTypes.cs" />
