First entities are created

--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Modules\DeponNet\GameM\Controllers\DeponGamesAdminController.cs" />
     <Compile Include="Modules\DeponNet\GameM\Game.cs" />
     <Compile Include="Modules\DeponNet\GameM\LocalGameDatabase.cs" />
-    <Compile Include="Modules\DeponNet\GameM\GameInfo.cs" />
+    <Compile Include="Modules\DeponNet\GameM\GamesData.cs" />
     <Compile Include="Modules\DeponNet\GameM\GameManagement.cs" />
     <Compile Include="Modules\DeponNet\GameM\Interface\IGameManagement.cs" />
     <Compile Include="Modules\DeponNet\MapM\Admin\VoxelMapAdminController.cs" />
@@ -64,12 +64,22 @@
     <Compile Include="Modules\DeponNet\MapM\Admin\MapTreeViewItem.cs" />
     <Compile Include="Modules\DeponNet\MapM\FieldCoordinates.cs" />
     <Compile Include="Modules\DeponNet\MapM\FieldTypes.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayerAdminInterface.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayersAdminController.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayersTreeViewItem.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\Admin\PlayerTreeView.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\Interface\IPlayerManagement.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\LocalPlayerDatabase.cs" />
     <Compile Include="Modules\DeponNet\PlayerM\Player.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\PlayerManagement.cs" />
+    <Compile Include="Modules\DeponNet\PlayerM\PlayersData.cs" />
     <Compile Include="Modules\DeponNet\RegionM\Region.cs" />
     <Compile Include="Modules\DeponNet\ResearchM\Research.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\Extension.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\ResourcesData.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\LocalResourceDatabase.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceSet.cs" />
-    <Compile Include="Modules\DeponNet\ResourceSetM\ResourceSetStore.cs" />
+    <Compile Include="Modules\DeponNet\ResourceSetM\ResourceSetBag.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceType.cs" />
     <Compile Include="Modules\DeponNet\TownM\Town.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Unit.cs" />
