--- a/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
+++ b/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
@@ -57,6 +57,7 @@
     <Compile Include="MapVoxelStorage\VoxelMapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserM\WebUserTests.cs" />
+    <Compile Include="WayPointCalculationM\TestOnlyHeights.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
