--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -94,6 +94,7 @@
     <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerCreationParams.cs" />
     <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerRules.cs" />
     <Compile Include="Modules\DeponNet\Rules\UnitJobM\UnitJobRules.cs" />
+    <Compile Include="Modules\DeponNet\Rules\UnitJobM\UnitMoveJobRule.cs" />
     <Compile Include="Modules\DeponNet\TownM\Town.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Interfaces\IUnitGroupManagement.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Interfaces\IUnitManagement.cs" />
