Start of fight implementation

--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -90,26 +90,27 @@
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceSetBag.cs" />
     <Compile Include="Modules\DeponNet\ResourceSetM\ResourceType.cs" />
     <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\IPlayerRules.cs" />
-    <Compile Include="Modules\DeponNet\Rules\UnitJobM\IUnitJobRules.cs" />
+    <Compile Include="Modules\DeponNet\Rules\UnitRulesM\IUnitJobRules.cs" />
     <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerCreationParams.cs" />
     <Compile Include="Modules\DeponNet\Rules\PlayerRulesM\PlayerRules.cs" />
-    <Compile Include="Modules\DeponNet\Rules\UnitJobM\UnitJobRules.cs" />
-    <Compile Include="Modules\DeponNet\Rules\UnitJobM\UnitMoveJobRule.cs" />
+    <Compile Include="Modules\DeponNet\Rules\UnitRulesM\UnitFightRound.cs" />
+    <Compile Include="Modules\DeponNet\Rules\UnitRulesM\UnitJobRules.cs" />
+    <Compile Include="Modules\DeponNet\Rules\UnitRulesM\UnitMoveJobRule.cs" />
     <Compile Include="Modules\DeponNet\TownM\Town.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Interfaces\IUnitGroupManagement.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Interfaces\IUnitManagement.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Interfaces\IUnitTypeProvider.cs" />
     <Compile Include="Modules\DeponNet\UnitM\LocalUnitDatabase.cs" />
     <Compile Include="Modules\DeponNet\UnitM\Strategies\UnitStrategy.cs" />
-    <Compile Include="Modules\DeponNet\UnitM\Unit.cs" />
-    <Compile Include="Modules\DeponNet\UnitM\UnitGroup.cs" />
+    <Compile Include="Modules\DeponNet\UnitM\Data\Unit.cs" />
+    <Compile Include="Modules\DeponNet\UnitM\Data\UnitGroup.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitGroupManagement.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitJobs\BaseJob.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitJobs\DoNothingJob.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitJobs\IJob.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitJobs\MoveJob.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitManagement.cs" />
-    <Compile Include="Modules\DeponNet\UnitM\UnitsData.cs" />
+    <Compile Include="Modules\DeponNet\UnitM\Data\UnitsData.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitType.cs" />
     <Compile Include="Modules\DeponNet\UnitM\UnitTypeProvider.cs" />
     <Compile Include="Modules\FlexBgModule.cs" />
