Performance improvements for fightsystem

--- a/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
+++ b/src/BurnSystems.FlexBG.Test/BurnSystems.FlexBG.Test.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseProviderByIdM\TestIndexProvider.cs" />
     <Compile Include="BaseProviderByIdM\TestProvider.cs" />
     <Compile Include="GenericObjectStorageM\TestStorage.cs" />
     <Compile Include="LockMasterM\TestSimpleLocking.cs" />
