--- a/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
+++ b/src/BurnSystems.FlexBG/BurnSystems.FlexBG.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Modules\DeponNet\GameM\Admin\GameTreeViewItem.cs" />
     <Compile Include="Modules\DeponNet\GameM\Controllers\DeponGamesAdminController.cs" />
     <Compile Include="Modules\DeponNet\GameM\Controllers\DeponGamesController.cs" />
+    <Compile Include="Modules\DeponNet\GameM\Controllers\JoinGameModel.cs" />
     <Compile Include="Modules\DeponNet\GameM\Game.cs" />
     <Compile Include="Modules\DeponNet\GameM\LocalGameDatabase.cs" />
     <Compile Include="Modules\DeponNet\GameM\GamesData.cs" />
